Archive2/b0/280742146c612e/output
main.cpp:9:14: error: use of 'auto c::f()' before deduction of 'auto'
     decltype(f()) i;
              ^
main.cpp:9:14: error: use of 'auto c::f()' before deduction of 'auto'
