Archive2/b0/280742146c612e/main.cpp
#include <iostream>
#include <string>
#include <vector>


class c
{
    auto f(){ return 1; }
    decltype(f()) i;
};


template<typename T>
std::ostream& operator<<(std::ostream& os, const std::vector<T>& vec)
{
    for (auto& el : vec)
    {
        os << el << ' ';
    }
    return os;
}

int main()
{
    std::vector<std::string> words = {
        "Hello", "from", "GCC", __VERSION__, "!"
    };
    std::cout << words << std::endl;
}
